fix contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #b1a430;
+	background-color: #786f20;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
